[gd_scene load_steps=12 format=2]

[ext_resource path="res://tree/tree.gd" type="Script" id=1]
[ext_resource path="res://full version/tiles/tree_shake.png" type="Texture" id=2]
[ext_resource path="res://tree/particles.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 1.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7.5, 7.5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="tree" type="AnimatedSprite" parent="."]
position = Vector2( 0, 16 )
frames = SubResource( 11 )

[node name="StaticBody2D" type="StaticBody2D" parent="tree"]
position = Vector2( 1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="tree/StaticBody2D"]
position = Vector2( -0.5, 8.5 )
shape = SubResource( 6 )

[node name="Particles2D" parent="." instance=ExtResource( 3 )]
visible = false
scale = Vector2( 0.5, 0.5 )
emitting = false
one_shot = true

[node name="Timer" type="Timer" parent="."]

[node name="respawn" type="Timer" parent="."]
wait_time = 90.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="respawn" to="." method="_on_respawn_timeout"]
